<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Costumer_Details">

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="175dp"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/transfer_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/img">

        <TextView
            android:id="@+id/displayname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textview7"
            android:textColor="@color/purple_700"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/displaymail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/displaymoney"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textview"
            android:textColor="@color/design_default_color_error"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="217dp"
        android:layout_height="191dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="transmoney"
        android:text="@string/transfer_money"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintVertical_bias="0.943" />

    <EditText
        android:id="@+id/transfer_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Amount"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintVertical_bias="0.914" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="100dp"
        android:layout_height="175dp"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/transfer_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="email :"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="money :"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>